client/src/components/scaler/style.css
#application {
    background-color: rgba(44, 44, 44, 0.699);
}
#scaler {
    /* background-attachment: fixed; */
    background-size: 100% 89%;
    background-repeat: no-repeat;
    background-image: url('../../assets/images/fretboardRighty.jpg');
    height: 300px;
    width: auto;
    margin-top: -50px;
    margin-bottom: -50px;
    padding-top: 63px;
}

.zindex {
    z-index: +1;
}

.dot {
    /* margin-top: 10px;
    margin-left: 35px; */
    width: 15px;
    height: 15px;
    background-color: rgba(255, 0, 0, 0);
    border-radius: 45px;
    border: rgba(0, 0, 0, 0) solid 1px;
    margin: auto;
}

.redDot {
    /* margin-top: 10px;
    margin-left: 35px; */
    width: 15px;
    height: 15px;
    background-color: rgba(255, 0, 0, 0.863);
    border-radius: 45px;
    border: rgb(0, 0, 0) solid 1px;
    margin: auto;
}

.redDot:hover {
    width: 15px;
    height: 15px;
    background-color: rgba(115, 255, 0, 0.863);
    border-radius: 45px;
    border: rgb(0, 0, 0) solid 1px;
    margin: auto;
}

.redDot:active {
    width: 15px;
    height: 15px;
    background-color: rgb(0, 150, 0);
    border-radius: 45px;
    border: rgb(30, 255, 0) solid 1px;
    margin: auto;
}

#highE {
    padding-top: 11px;
}
#B {
    padding-top: 6px;
}

#G, #A{
    padding-top: 7px;
}

#D {
    padding-top: 9px;
}

#E {
    padding-top: 5px;
}

#highE, #B, #G, #D, #A, #E {
    margin-left: 1%;
    padding: auto
}

.fret0, .fret1, .fret2, 
.fret3, .fret4, .fret5, 
.fret6, .fret7, .fret8, 
.fret9, .fret10, .fret11, 
.fret12 {
    /* background-color: rgba(255, 0, 0, 0.507); */
    border: rgba(0, 0, 0, 0) 1px solid;
}

.fret0 {
    margin-left: 1.6%;
    width: 1.3%;
    padding-left: 0%;
}

.fret1 {
    width: 7.102%;
}

.fret2 {
    width: 7%; 
}

.fret3 {
    width: 6.837%; 
}

.fret4 {
    width: 6.6%; 
}

.fret5 {
    width: 6.25%; 
}

 .fret6 {
    width: 5.74%; 
}

.fret7 {
    width: 5.35%; 
}

.fret8 {
    width: 5.275%; 
}

.fret9 {
    width: 4.95%; 
 }

.fret10 {
    width: 4.7%; 
 }

.fret11 {
    width: 4.26%; 
 }

.fret12 {
    width: 4.15%; 
 }

.controlBar {
    border: 1px solid black;
    margin: 0;
    font-family: Arial, sans-serif;
    height: 30vh;
    padding: 1em;
    background: linear-gradient(
        0deg, #1f1f1f 0%, #2c2c2c 100%
    )
}

